--- a/anfisa_for_friends/templates_copy/templates/homepage/index.html
+++ b/anfisa_for_friends/templates_copy/templates/homepage/index.html
@@ -6,9 +6,10 @@
 <h1 class="pb-2 mb-0">Главная страница</h1>
 <div class="row">
   {% for ice_cream in ice_cream_list %}
-    {% include "includes/ice_cream_card.html" %}
-  {% endfor %} 
-<div/>
+   <h3>{{ ice_cream.title }} ID: {{ ice_cream.id }}</h3>
+  <!-- Выведем название категории -->
+  <p>Категория: {{ ice_cream.category__title }}</p>
+{% endfor %} 
 {% endblock %}
 
 
